--- a/package.yaml
+++ b/package.yaml
@@ -30,9 +30,9 @@ flags:
     default: false
 
 dependencies:
-  - base >= 4.18.2 && < 4.19
+  - base >= 4.18.2 && < 4.20
   - protolude >= 0.3.4 && < 0.4
-  - text >= 2.0.2 && < 2.1
+  - text >= 2.0 && < 2.2
   - sqlite-simple >= 0.4.19 && < 0.5
 
 default-extensions:
@@ -55,6 +55,7 @@ default-extensions:
   - OverloadedStrings
   - RankNTypes
   - RecordWildCards
+  - RoleAnnotations
   - ScopedTypeVariables
   - StandaloneDeriving
   - TupleSections
@@ -79,14 +80,14 @@ library:
   dependencies:
     - aeson >= 2.1.2.1 && < 2.3
     - blaze-markup >= 0.8.3 && < 0.9
-    - bytestring >= 0.11.5 && < 0.12
+    - bytestring >= 0.11 && < 0.13
     - conduit >= 1.3.5 && < 1.4
     - directory >= 1.3.8 && < 1.4
     - double-x-encoding >= 1.2.1 && < 1.3
     - exceptions >= 0.10.7 && < 0.11
     - extra >= 1.7.14 && < 1.8
     - filepath >= 1.4.200 && < 1.5
-    - graphql >= 1.2.0.1 && < 1.4
+    - graphql >= 1.2 && < 1.6
     - graphql-spice >= 1.0.2 && < 1.1
     - http-types >= 0.12.4 && < 0.13
     - process >= 1.6.17 && < 1.7
@@ -96,8 +97,8 @@ library:
     - servant-docs >= 0.13 && < 0.14
     - servant-multipart >= 0.12.1 && < 0.13
     - servant-server >= 0.20 && < 0.21
-    - simple-sql-parser >= 0.6.1 && < 0.8
-    - template-haskell >= 2.20.0 && < 2.21
+    - simple-sql-parser >= 0.6 && < 0.9
+    - template-haskell >= 2.20.0 && < 2.22
     - time >= 1.12.2 && < 1.13
     - typed-process >= 0.2.11 && < 0.3
     - unix >= 2.8.4 && < 2.9
@@ -122,7 +123,7 @@ executables:
       - http-client >= 0.7.17 && < 0.8
       - wai >= 3.2.4 && < 3.3
       - wai-cors >= 0.2.7 && < 0.3
-      - warp >= 3.3.31 && < 3.4
+      - warp >= 3.3.31 && < 3.5
 
 tests:
   airgql-test:
@@ -131,14 +132,11 @@ tests:
     dependencies:
       - aeson >= 2.1.2.1 && < 2.3
       - airgql
-      - bytestring >= 0.11.5 && < 0.12
+      - bytestring >= 0.11 && < 0.13
       - directory >= 1.3.8 && < 1.4
-      - exceptions >= 0.10.7 && < 0.11
       - filepath >= 1.4.200 && < 1.5
-      - graphql >= 1.2.0.1 && < 1.4
       - graphql-spice >= 1.0.2 && < 1.1
       - hspec >= 2.11.8 && < 2.12
       - servant-server >= 0.20 && < 0.21
       - unix >= 2.8.4 && < 2.9
-      - unordered-containers >= 0.2.20 && < 0.3
       - vector >=0.13.0.0 && < 0.14
